# SnakeQT

./: .gitignore  CMakeLists.txt  jeu.cpp  jeu.hpp  main.cpp  readme.md  resources.qrc  snakewindow.cpp  snakewindow.hpp
.github/workflows/: cmake-multi-platform.yml
maps/: map1.skm  map2.skm  map3.skm
src/: constants.hpp  inmemoryzip.cpp  inmemoryzip.hpp  jeu.cpp  jeu.hpp  main.cpp  map.cpp  map.hpp  network_manager.cpp  network_manager.hpp  snakewindow.cpp  snakewindow.hpp  zip.cpp  zip.hpp
src/screens/: browsemapscreen.cpp  browsemapscreen.hpp  editorscreen.cpp  editorscreen.hpp  endgamescreen.cpp  endgamescreen.hpp  gamearea.cpp  gamearea.hpp  gamescreen.cpp  gamescreen.hpp  mainmenu.hpp  snakewindow.cpp  snakewindow.hpp
